Microsoft-analysis-of-movies

--- a/Data_exploration.ipynb
+++ b/Data_exploration.ipynb
@@ -591,7 +591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data exploration.ipynb\n",
+      "Data_exploration.ipynb\n",
       "README.md\n",
       "im.db\n",
       "zippedData\n"
@@ -628,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x211a6a44f80>"
+       "<sqlite3.Cursor at 0x22be39ba2d0>"
       ]
      },
      "execution_count": 14,
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "[146144 rows x 6 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
        "(146144, 6)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1028,7 +1028,7 @@
        "4        2017             80.0  Comedy,Drama,Fantasy  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "[73856 rows x 5 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
        "[146144 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
        "[73856 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
        "<function pandas.io.sql.read_sql(sql, con, index_col=None, coerce_float=True, params=None, parse_dates=None, columns=None, chunksize: Union[int, NoneType] = None) -> Union[pandas.core.frame.DataFrame, Iterator[pandas.core.frame.DataFrame]]>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
        "[1560 rows x 12 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
        "[54432 rows x 8 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
        "[26517 rows x 10 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2376,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2543,7 +2543,7 @@
        "[5782 rows x 6 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2654,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2666,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2675,7 +2675,7 @@
        "(5782, 6)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2687,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2696,7 @@
        "RangeIndex(start=0, stop=5782, step=1)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2753,7 +2753,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2786,7 +2786,7 @@
        "Length: 5782, dtype: bool"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2797,10 +2797,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>$425,000,000</td>\n",
+       "      <td>$760,507,625</td>\n",
+       "      <td>$2,776,345,279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>$410,600,000</td>\n",
+       "      <td>$241,063,875</td>\n",
+       "      <td>$1,045,663,875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>$350,000,000</td>\n",
+       "      <td>$42,762,350</td>\n",
+       "      <td>$149,762,350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>$330,600,000</td>\n",
+       "      <td>$459,005,868</td>\n",
+       "      <td>$1,403,013,963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>$317,000,000</td>\n",
+       "      <td>$620,181,382</td>\n",
+       "      <td>$1,316,721,747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  release_date                                        movie  \\\n",
+       "0   1  Dec 18, 2009                                       Avatar   \n",
+       "1   2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2   3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3   4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4   5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "\n",
+       "  production_budget domestic_gross worldwide_gross  \n",
+       "0      $425,000,000   $760,507,625  $2,776,345,279  \n",
+       "1      $410,600,000   $241,063,875  $1,045,663,875  \n",
+       "2      $350,000,000    $42,762,350    $149,762,350  \n",
+       "3      $330,600,000   $459,005,868  $1,403,013,963  \n",
+       "4      $317,000,000   $620,181,382  $1,316,721,747  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_budgetsdf.head()"
+   ]
   },
   {
    "cell_type": "code",
